--- a/src/index.html
+++ b/src/index.html
@@ -24,46 +24,26 @@
   <link href="./output.css" rel="stylesheet">
 </head>
 
-<body>
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
+<body class="bg-Lightblue w-full h-screen flex items-center justify-center">
+  <!-- PersonalInfo -->
+  <div class="bg-White">
+    <div>
 
-  <!-- Sidebar start -->
+    </div>
+    <div>
 
-  Step 1
-  Your info
+    </div>
+  </div>
+  <!-- Sidebar start
 
-  Step 2
-  Select plan
+  Step 1 Your info Step 2 Select plan Step 3 Add-ons Step 4 Summary
+  Sidebar end
 
-  Step 3
-  Add-ons
-
-  Step 4
-  Summary
-
-  <!-- Sidebar end -->
-
-  <!-- Step 1 start -->
-
-  Personal info
-  Please provide your name, email address, and phone number.
-
-  Name
-  e.g. Stephen King
-
-  Email Address
-  e.g. stephenking@lorem.com
-
-  Phone Number
-  e.g. +1 234 567 890
-
-  Next Step
-
-  <!-- Step 1 end -->
-
-  <!-- Step 2 start -->
+  Step 1 start
+  Personal info Please provide your name, email address, and phone number. Name e.g. Stephen King Email
+  Address e.g. stephenking@lorem.com Phone Number e.g. +1 234 567 890 Next Step
+  Step 1 end
+  Step 2 start
 
   Select your plan
   You have the option of monthly or yearly billing.
@@ -83,9 +63,9 @@
   Go Back
   Next Step
 
-  <!-- Step 2 end -->
+  Step 2 end
 
-  <!-- Step 3 start -->
+  Step 3 start
 
   Pick add-ons
   Add-ons help enhance your gaming experience.
@@ -105,33 +85,15 @@
   Go Back
   Next Step
 
-  <!-- Step 3 end -->
 
-  <!-- Step 4 start -->
-
-  Finishing up
-  Double-check everything looks OK before confirming.
-
-  <!-- Dynamically add subscription and add-on selections here -->
-
-  Total (per month/year)
-
-  Go Back
-  Confirm
-
-  <!-- Step 4 end -->
-
-  <!-- Step 5 start -->
-
-  Thank you!
-
-  Thanks for confirming your subscription! We hope you have fun
-  using our platform. If you ever need support, please feel free
-  to email us at support@loremgaming.com.
-
-  <!-- Step 5 end -->
-
-  <div class="attribution">
+  Step 3 end
+  Step 4 start
+  Finishing up Double-check everything looks OK before confirming. Dynamically add
+  subscription and add-on selections here Total (per month/year) Go Back Confirm step 4 end Step 5 start Thank you!
+  Thanks for confirming your subscription! We hope you have fun using our platform. If you ever need support, please
+  feel free to email us at support@loremgaming.com.
+  Step 5 end -->
+  <div class="attribution fixed bottom-0 p-2">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
