--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="../assets/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <title>Frontend Mentor | Multi-step form</title>
 
@@ -26,73 +26,97 @@
 
 <body class="bg-Lightblue w-full h-screen flex items-center justify-center">
   <!-- PersonalInfo -->
-  <div class="bg-White">
-    <div>
+  <div class="bg-White flex rounded-lg p-2">
 
+    <div class="bg-[url('./images/bg-sidebar-desktop.svg')] bg-contain bg-no-repeat p-5 rounded-l-lg">
+      <div class="p-5 space-y-8">
+
+        <div class="flex items-center">
+          <div class="w-10 h-10 flex items-center justify-center text-black bg-Lightblue rounded-full">
+            1
+          </div>
+          <div class="ml-4">
+            <p class="font-ubuntu text-Coolgray whitespace-nowrap">STEP 1</p>
+            <h3 class="font-ubuntu text-lg text-White font-bold whitespace-nowrap">YOUR INFO</h3>
+          </div>
+        </div>
+
+        <div class="flex items-center">
+          <div class="w-10 h-10 flex items-center justify-center text-black bg-Lightblue rounded-full">
+            2
+          </div>
+          <div class="ml-4">
+            <p class="font-ubuntu text-Coolgray whitespace-nowrap">STEP 2</p>
+            <h3 class="font-ubuntu text-lg text-White font-bold whitespace-nowrap">SELECT PLAN</h3>
+          </div>
+        </div>
+
+        <div class="flex items-center">
+          <div class="w-10 h-10 flex items-center justify-center text-black bg-Lightblue rounded-full">
+            3
+          </div>
+          <div class="ml-4">
+            <p class="font-ubuntu text-Coolgray whitespace-nowrap">STEP 3</p>
+            <h3 class="font-ubuntu text-lg text-White font-bold whitespace-nowrap">ADD-ONS</h3>
+          </div>
+        </div>
+
+        <div class="flex items-center">
+          <div class="w-10 h-10 flex items-center justify-center text-black bg-Lightblue rounded-full">
+            4
+          </div>
+          <div class="ml-4">
+            <p class="font-ubuntu text-Coolgray whitespace-nowrap">STEP 4</p>
+            <h3 class="font-ubuntu text-lg text-White font-bold whitespace-nowrap">SUMMARY</h3>
+          </div>
+        </div>
+      </div>
     </div>
-    <div>
 
+    <!-- Form Area -->
+    <div class="py-10 px-12">
+      <h1 class="text-Marineblue font-ubuntu text-2xl font-bold">Personal info</h1>
+      <p class="font-ubuntu text-base text-Coolgray mb-5">
+        Please provide your name, email address, and phone number.
+      </p>
+      <form action="#">
+        <div class="space-y-6">
+          <div>
+            <p class="text-base font-ubuntu font-bold">Name</p>
+            <input type="text" class="w-full border-Lightgray px-2 py-2 border-2 rounded-lg"
+              placeholder="e.g. Stephen King">
+          </div>
+          <div>
+            <p class="text-base font-ubuntu font-bold">Email Address</p>
+            <input type="email" class="w-full border-Lightgray px-2 py-2 border-2 rounded-lg"
+              placeholder="e.g.stephenking@lorem.com">
+          </div>
+          <div>
+            <p class="text-base font-ubuntu font-bold">Phone Number</p>
+            <input type="text" class="w-full border-Lightgray px-2 py-2 border-2 rounded-lg"
+              placeholder="e.g. +1 234 567 890">
+          </div>
+        </div>
+        <div class="flex justify-end py-2">
+          <a href="#" class="px-6 py-3 bg-Marineblue font-ubuntu text-White rounded-lg mt-7 text-base">Next Step</a>
+        </div>
+      </form>
     </div>
   </div>
-  <!-- Sidebar start
 
-  Step 1 Your info Step 2 Select plan Step 3 Add-ons Step 4 Summary
-  Sidebar end
-
-  Step 1 start
-  Personal info Please provide your name, email address, and phone number. Name e.g. Stephen King Email
-  Address e.g. stephenking@lorem.com Phone Number e.g. +1 234 567 890 Next Step
-  Step 1 end
-  Step 2 start
-
-  Select your plan
-  You have the option of monthly or yearly billing.
-
-  Arcade
-  $9/mo
-
-  Advanced
-  $12/mo
-
-  Pro
-  $15/mo
-
-  Monthly
-  Yearly
-
-  Go Back
-  Next Step
-
-  Step 2 end
-
-  Step 3 start
-
-  Pick add-ons
-  Add-ons help enhance your gaming experience.
-
-  Online service
-  Access to multiplayer games
-  +$1/mo
-
-  Larger storage
-  Extra 1TB of cloud save
-  +$2/mo
-
-  Customizable Profile
-  Custom theme on your profile
-  +$2/mo
-
-  Go Back
-  Next Step
+  <!-- selectPlanPage -->
 
 
-  Step 3 end
-  Step 4 start
-  Finishing up Double-check everything looks OK before confirming. Dynamically add
-  subscription and add-on selections here Total (per month/year) Go Back Confirm step 4 end Step 5 start Thank you!
-  Thanks for confirming your subscription! We hope you have fun using our platform. If you ever need support, please
-  feel free to email us at support@loremgaming.com.
-  Step 5 end -->
+  <!-- Sidebar start Step 1 Your info  Sidebar end Step 1 start Personal info Name  Email Address e.g.
+            stephenking@lorem.com   Step 1 end 
+            You have the option of monthly or yearly billing. Arcade $9/mo Advanced $12/mo Pro $15/mo Monthly Yearly Go
+            Back Next Step Step 2 end Step 3 start Pick add-ons Add-ons help enhance your gaming experience. Online
+            service Access to multiplayer games +$1/mo Larger storage Extra 1TB of cloud save +$2/mo Customizable
+            Profile Custom theme on your profile +$2/mo Go Back Next Step Step 3 end Step 4 start Finishing up
+            Double-check everything looks OK before confirming. Dynamically add subscription and add-on selections here
+            Total (per month/year) Go Back Confirm step 4 end Step 5 start Thank you! Thanks for confirming your
+            subscription! We hope you have fun using our platform. If you ever need support, please feel free to email
+            us at support@loremgaming.com. Step 5 end -->
   <div class="attribution fixed bottom-0 p-2">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
