--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
 
 <body class="bg-Lightblue w-full h-screen flex items-center justify-center">
   <!-- PersonalInfo -->
-  <div class="bg-White flex rounded-lg p-2">
+  <div class="bg-White flex rounded-lg p-2 shadow-lg hidden">
 
     <div class="bg-[url('./images/bg-sidebar-desktop.svg')] bg-contain bg-no-repeat p-5 rounded-l-lg">
       <div class="p-5 space-y-8">
@@ -104,14 +104,260 @@
     </div>
   </div>
 
+
+
+
+
+
   <!-- selectPlanPage -->
+  <div class="bg-White rounded-lg p-2 shadow-lg hidden">
+
+    <div class="bg-[url('./images/bg-sidebar-desktop.svg')] bg-contain bg-no-repeat p-5 rounded-l-lg">
+      <div class="p-5 space-y-8">
+
+        <div class="flex items-center">
+          <div class="w-10 h-10 flex items-center justify-center text-black bg-Lightblue rounded-full">
+            1
+          </div>
+          <div class="ml-4">
+            <p class="font-ubuntu text-Coolgray whitespace-nowrap">STEP 1</p>
+            <h3 class="font-ubuntu text-lg text-White font-bold whitespace-nowrap">YOUR INFO</h3>
+          </div>
+        </div>
+
+        <div class="flex items-center">
+          <div class="w-10 h-10 flex items-center justify-center text-black bg-Lightblue rounded-full">
+            2
+          </div>
+          <div class="ml-4">
+            <p class="font-ubuntu text-Coolgray whitespace-nowrap">STEP 2</p>
+            <h3 class="font-ubuntu text-lg text-White font-bold whitespace-nowrap">SELECT PLAN</h3>
+          </div>
+        </div>
+
+        <div class="flex items-center">
+          <div class="w-10 h-10 flex items-center justify-center text-black bg-Lightblue rounded-full">
+            3
+          </div>
+          <div class="ml-4">
+            <p class="font-ubuntu text-Coolgray whitespace-nowrap">STEP 3</p>
+            <h3 class="font-ubuntu text-lg text-White font-bold whitespace-nowrap">ADD-ONS</h3>
+          </div>
+        </div>
+
+        <div class="flex items-center">
+          <div class="w-10 h-10 flex items-center justify-center text-black bg-Lightblue rounded-full">
+            4
+          </div>
+          <div class="ml-4">
+            <p class="font-ubuntu text-Coolgray whitespace-nowrap">STEP 4</p>
+            <h3 class="font-ubuntu text-lg text-White font-bold whitespace-nowrap">SUMMARY</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Form Area -->
+    <div class="py-10 px-10">
+      <h1 class="text-Marineblue font-ubuntu text-2xl font-bold">Select your plan</h1>
+      <p class="font-ubuntu text-base text-Coolgray mb-5">
+        You have the option of monthly or yearly billing
+      </p>
+
+      <div class="space-x-2 grid grid-cols-3 ">
+        <div
+          class="w-40 h-48 border-2 border-Coolgray  items-start justify-between p-6 rounded-lg hover:ring-2  hover:ring-Pastelblue hover:border-0 hover:bg-Alabaster">
+          <img src="./images/icon-arcade.svg" alt="arcade" class="w-12 h-12">
+          <h3 class="text-lg text-Marineblue font-ubuntu font-bold mt-10">
+            Arcade
+          </h3>
+          <p class="font-ubuntu text-Coolgray whitespace-nowrap">
+            $9/mo
+          </p>
+          <p class="font-ubuntu  whitespace-nowrap font-semibold">
+            2 month free
+          </p>
+        </div>
+        <div
+          class="w-40 h-48 border-2 border-Coolgray  items-start justify-between p-6 rounded-lg hover:ring-2  hover:ring-Pastelblue hover:border-0 hover:bg-Alabaster">
+          <img src="./images/icon-advanced.svg" alt="arcade" class="w-12 h-12">
+          <h3 class="text-lg text-Marineblue font-ubuntu font-bold mt-10">
+            Advanced
+          </h3>
+          <p class="font-ubuntu text-Coolgray whitespace-nowrap">
+            $12/mo
+          </p>
+          <p class="font-ubuntu  whitespace-nowrap font-semibold">
+            2 month free
+          </p>
+        </div>
+        <div
+          class="w-40 h-48 border-2 border-Coolgray  items-start justify-between p-6 rounded-lg hover:ring-2  hover:ring-Pastelblue hover:border-0 hover:bg-Alabaster">
+          <img src="./images/icon-pro.svg" alt="arcade" class="w-12 h-12">
+          <h3 class="text-lg text-Marineblue font-ubuntu font-bold mt-10">
+            Pro
+          </h3>
+          <p class="font-ubuntu text-Coolgray whitespace-nowrap">
+            $15/mo
+          </p>
+          <p class="font-ubuntu text-black whitespace-nowrap font-semibold">
+            2 month free
+          </p>
+        </div>
 
 
-  <!-- Sidebar start Step 1 Your info  Sidebar end Step 1 start Personal info Name  Email Address e.g.
-            stephenking@lorem.com   Step 1 end 
-            You have the option of monthly or yearly billing. Arcade $9/mo Advanced $12/mo Pro $15/mo Monthly Yearly Go
+
+
+
+
+      </div>
+      <div class="flex justify-end py-2">
+        <a href="#" class="px-6 py-3 bg-Marineblue font-ubuntu text-White rounded-lg mt-7 text-base">Next Step</a>
+      </div>
+
+    </div>
+  </div>
+  <!-- pickaddons -->
+ <div class="bg-White flex rounded-lg p-2 shadow-lg">
+
+   <div class="bg-[url('./images/bg-sidebar-desktop.svg')] bg-contain bg-no-repeat p-5 rounded-l-lg">
+     <div class="p-5 space-y-8">
+
+       <div class="flex items-center">
+         <div class="w-10 h-10 flex items-center justify-center text-black bg-Lightblue rounded-full">
+           1
+         </div>
+         <div class="ml-4">
+           <p class="font-ubuntu text-Coolgray whitespace-nowrap">STEP 1</p>
+           <h3 class="font-ubuntu text-lg text-White font-bold whitespace-nowrap">YOUR INFO</h3>
+         </div>
+       </div>
+
+       <div class="flex items-center">
+         <div class="w-10 h-10 flex items-center justify-center text-black bg-Lightblue rounded-full">
+           2
+         </div>
+         <div class="ml-4">
+           <p class="font-ubuntu text-Coolgray whitespace-nowrap">STEP 2</p>
+           <h3 class="font-ubuntu text-lg text-White font-bold whitespace-nowrap">SELECT PLAN</h3>
+         </div>
+       </div>
+
+       <div class="flex items-center">
+         <div class="w-10 h-10 flex items-center justify-center text-black bg-Lightblue rounded-full">
+           3
+         </div>
+         <div class="ml-4">
+           <p class="font-ubuntu text-Coolgray whitespace-nowrap">STEP 3</p>
+           <h3 class="font-ubuntu text-lg text-White font-bold whitespace-nowrap">ADD-ONS</h3>
+         </div>
+       </div>
+
+       <div class="flex items-center">
+         <div class="w-10 h-10 flex items-center justify-center text-black bg-Lightblue rounded-full">
+           4
+         </div>
+         <div class="ml-4">
+           <p class="font-ubuntu text-Coolgray whitespace-nowrap">STEP 4</p>
+           <h3 class="font-ubuntu text-lg text-White font-bold whitespace-nowrap">SUMMARY</h3>
+         </div>
+       </div>
+     </div>
+   </div>
+
+   <!-- Form Area -->
+   <div class="py-10 px-12">
+     <h1 class="text-Marineblue font-ubuntu text-2xl font-bold">Pick add-ons </h1>
+     <p class="font-ubuntu text-base text-Coolgray mb-5">
+       Add-ons help enhance your gaming
+       experience.
+     </p>
+
+     <div class="space-y-3 flex flex-col">
+       <div class="bg-White border-2 border-Coolgray rounded-lg">
+         <div class="flex space-x-4 p-4">
+           <div class="flex items-center">
+             <input id="checkbox" type="checkbox"
+               class="form-checkbox h-5 w-5 text-blue-600 transition duration-150 ease-in-out">
+             <label for="checkbox" class="ml-2 text-sm font-medium text-gray-900"></label>
+           </div>
+           <div class="flex justify-between items-center space-x-6">
+             <div>
+               <h1>
+                 Online Services
+               </h1>
+               <p>
+                 Access to multiplayer games
+               </p>
+             </div>
+             <div>
+               <p>
+                 +$1/mo
+               </p>
+             </div>
+           </div>
+         </div>
+       </div>
+
+
+       <div class="bg-White border-2 border-Coolgray rounded-lg">
+         <div class="flex space-x-4 p-4">
+           <div class="flex items-center">
+             <input id="checkbox" type="checkbox"
+               class="form-checkbox h-5 w-5 text-blue-600 transition duration-150 ease-in-out">
+             <label for="checkbox" class="ml-2 text-sm font-medium text-gray-900"></label>
+           </div>
+           <div class="flex justify-between items-center space-x-6">
+             <div>
+               <h1>
+                 Online Services
+               </h1>
+               <p>
+                 Access to multiplayer games
+               </p>
+             </div>
+             <div>
+               <p>
+                 +$1/mo
+               </p>
+             </div>
+           </div>
+         </div>
+       </div>
+       <div class="bg-White border-2 border-Coolgray rounded-lg">
+         <div class="flex space-x-4 p-4">
+           <div class="flex items-center">
+             <input id="checkbox" type="checkbox"
+               class="form-checkbox h-5 w-5 text-blue-600 transition duration-150 ease-in-out">
+             <label for="checkbox" class="ml-2 text-sm font-medium text-gray-900"></label>
+           </div>
+           <div class="flex justify-between items-center space-x-6">
+             <div>
+               <h1>
+                 Online Services
+               </h1>
+               <p>
+                 Access to multiplayer games
+               </p>
+             </div>
+             <div>
+               <p>
+                 +$1/mo
+               </p>
+             </div>
+           </div>
+         </div>
+       </div>
+     </div>
+   </div>
+ </div>
+
+
+
+  <!-- 
+             Monthly Yearly Go
             Back Next Step Step 2 end Step 3 start Pick add-ons Add-ons help enhance your gaming experience. Online
-            service Access to multiplayer games +$1/mo Larger storage Extra 1TB of cloud save +$2/mo Customizable
+            service  Larger storage Extra 1TB of cloud save +$2/mo Customizable
             Profile Custom theme on your profile +$2/mo Go Back Next Step Step 3 end Step 4 start Finishing up
             Double-check everything looks OK before confirming. Dynamically add subscription and add-on selections here
             Total (per month/year) Go Back Confirm step 4 end Step 5 start Thank you! Thanks for confirming your
@@ -122,5 +368,6 @@
     Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
+
 
 </html>
