--- a/src/index.html
+++ b/src/index.html
@@ -218,151 +218,159 @@
     </div>
   </div>
   <!-- pickaddons -->
- <div class="bg-White flex rounded-lg p-2 shadow-lg">
+  <div class="bg-White flex rounded-lg p-2 shadow-lg">
 
-   <div class="bg-[url('./images/bg-sidebar-desktop.svg')] bg-contain bg-no-repeat p-5 rounded-l-lg">
-     <div class="p-5 space-y-8">
+    <div class="bg-[url('./images/bg-sidebar-desktop.svg')] bg-contain bg-no-repeat p-5 rounded-l-lg">
+      <div class="p-5 space-y-8">
 
-       <div class="flex items-center">
-         <div class="w-10 h-10 flex items-center justify-center text-black bg-Lightblue rounded-full">
-           1
-         </div>
-         <div class="ml-4">
-           <p class="font-ubuntu text-Coolgray whitespace-nowrap">STEP 1</p>
-           <h3 class="font-ubuntu text-lg text-White font-bold whitespace-nowrap">YOUR INFO</h3>
-         </div>
-       </div>
+        <div class="flex items-center">
+          <div class="w-10 h-10 flex items-center justify-center text-black bg-Lightblue rounded-full">
+            1
+          </div>
+          <div class="ml-4">
+            <p class="font-ubuntu text-Coolgray whitespace-nowrap">STEP 1</p>
+            <h3 class="font-ubuntu text-lg text-White font-bold whitespace-nowrap">YOUR INFO</h3>
+          </div>
+        </div>
 
-       <div class="flex items-center">
-         <div class="w-10 h-10 flex items-center justify-center text-black bg-Lightblue rounded-full">
-           2
-         </div>
-         <div class="ml-4">
-           <p class="font-ubuntu text-Coolgray whitespace-nowrap">STEP 2</p>
-           <h3 class="font-ubuntu text-lg text-White font-bold whitespace-nowrap">SELECT PLAN</h3>
-         </div>
-       </div>
+        <div class="flex items-center">
+          <div class="w-10 h-10 flex items-center justify-center text-black bg-Lightblue rounded-full">
+            2
+          </div>
+          <div class="ml-4">
+            <p class="font-ubuntu text-Coolgray whitespace-nowrap">STEP 2</p>
+            <h3 class="font-ubuntu text-lg text-White font-bold whitespace-nowrap">SELECT PLAN</h3>
+          </div>
+        </div>
 
-       <div class="flex items-center">
-         <div class="w-10 h-10 flex items-center justify-center text-black bg-Lightblue rounded-full">
-           3
-         </div>
-         <div class="ml-4">
-           <p class="font-ubuntu text-Coolgray whitespace-nowrap">STEP 3</p>
-           <h3 class="font-ubuntu text-lg text-White font-bold whitespace-nowrap">ADD-ONS</h3>
-         </div>
-       </div>
+        <div class="flex items-center">
+          <div class="w-10 h-10 flex items-center justify-center text-black bg-Lightblue rounded-full">
+            3
+          </div>
+          <div class="ml-4">
+            <p class="font-ubuntu text-Coolgray whitespace-nowrap">STEP 3</p>
+            <h3 class="font-ubuntu text-lg text-White font-bold whitespace-nowrap">ADD-ONS</h3>
+          </div>
+        </div>
 
-       <div class="flex items-center">
-         <div class="w-10 h-10 flex items-center justify-center text-black bg-Lightblue rounded-full">
-           4
-         </div>
-         <div class="ml-4">
-           <p class="font-ubuntu text-Coolgray whitespace-nowrap">STEP 4</p>
-           <h3 class="font-ubuntu text-lg text-White font-bold whitespace-nowrap">SUMMARY</h3>
-         </div>
-       </div>
-     </div>
-   </div>
+        <div class="flex items-center">
+          <div class="w-10 h-10 flex items-center justify-center text-black bg-Lightblue rounded-full">
+            4
+          </div>
+          <div class="ml-4">
+            <p class="font-ubuntu text-Coolgray whitespace-nowrap">STEP 4</p>
+            <h3 class="font-ubuntu text-lg text-White font-bold whitespace-nowrap">SUMMARY</h3>
+          </div>
+        </div>
+      </div>
+    </div>
 
-   <!-- Form Area -->
-   <div class="py-10 px-12">
-     <h1 class="text-Marineblue font-ubuntu text-2xl font-bold">Pick add-ons </h1>
-     <p class="font-ubuntu text-base text-Coolgray mb-5">
-       Add-ons help enhance your gaming
-       experience.
-     </p>
+    <!-- Form Area -->
+    <div class="py-10 px-12">
+      <h1 class="text-Marineblue font-ubuntu text-2xl font-bold">Pick add-ons </h1>
+      <p class="font-ubuntu text-base text-Coolgray mb-5">
+        Add-ons help enhance your gaming
+        experience.
+      </p>
 
-     <div class="space-y-3 flex flex-col">
-       <div class="bg-White border-2 border-Coolgray rounded-lg">
-         <div class="flex space-x-4 p-4">
-           <div class="flex items-center">
-             <input id="checkbox" type="checkbox"
-               class="form-checkbox h-5 w-5 text-blue-600 transition duration-150 ease-in-out">
-             <label for="checkbox" class="ml-2 text-sm font-medium text-gray-900"></label>
-           </div>
-           <div class="flex justify-between items-center space-x-6">
-             <div>
-               <h1>
-                 Online Services
-               </h1>
-               <p>
-                 Access to multiplayer games
-               </p>
-             </div>
-             <div>
-               <p>
-                 +$1/mo
-               </p>
-             </div>
-           </div>
-         </div>
-       </div>
-
-
-       <div class="bg-White border-2 border-Coolgray rounded-lg">
-         <div class="flex space-x-4 p-4">
-           <div class="flex items-center">
-             <input id="checkbox" type="checkbox"
-               class="form-checkbox h-5 w-5 text-blue-600 transition duration-150 ease-in-out">
-             <label for="checkbox" class="ml-2 text-sm font-medium text-gray-900"></label>
-           </div>
-           <div class="flex justify-between items-center space-x-6">
-             <div>
-               <h1>
-                 Online Services
-               </h1>
-               <p>
-                 Access to multiplayer games
-               </p>
-             </div>
-             <div>
-               <p>
-                 +$1/mo
-               </p>
-             </div>
-           </div>
-         </div>
-       </div>
-       <div class="bg-White border-2 border-Coolgray rounded-lg">
-         <div class="flex space-x-4 p-4">
-           <div class="flex items-center">
-             <input id="checkbox" type="checkbox"
-               class="form-checkbox h-5 w-5 text-blue-600 transition duration-150 ease-in-out">
-             <label for="checkbox" class="ml-2 text-sm font-medium text-gray-900"></label>
-           </div>
-           <div class="flex justify-between items-center space-x-6">
-             <div>
-               <h1>
-                 Online Services
-               </h1>
-               <p>
-                 Access to multiplayer games
-               </p>
-             </div>
-             <div>
-               <p>
-                 +$1/mo
-               </p>
-             </div>
-           </div>
-         </div>
-       </div>
-     </div>
-   </div>
- </div>
+      <div class="space-y-3 flex flex-col">
+        <div class="bg-White border-2 border-Coolgray rounded-lg">
+          <div class="flex space-x-4 p-4">
+            <div class="flex items-center">
+              <input id="checkbox" type="checkbox"
+                class="form-checkbox h-5 w-5 text-blue-600 transition duration-150 ease-in-out">
+              <label for="checkbox" class="ml-2 text-sm font-medium text-gray-900"></label>
+            </div>
+            <div class="flex justify-between items-center space-x-6">
+              <div>
+                <h1 class="font-ubuntu text-lg text-Marineblue font-bold">
+                  Online Services
+                </h1>
+                <p class="whitespace-nowrap font-ubuntu text-Coolgray">
+                  Access to multiplayer games
+                </p>
+              </div>
+              <div class="">
+                <p>
+                  +$1/mo
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
 
 
+        <div class="bg-White border-2 border-Coolgray rounded-lg">
+          <div class="flex space-x-4 p-4">
+            <div class="flex items-center">
+              <input id="checkbox" type="checkbox"
+                class="form-checkbox h-5 w-5 text-blue-600 transition duration-150 ease-in-out">
+              <label for="checkbox" class="ml-2 text-sm font-medium text-gray-900"></label>
+            </div>
+            <div class="flex justify-between items-center space-x-6">
+              <div>
+                <h1 class="font-ubuntu text-lg text-Marineblue font-bold">
+                  Larger storage
+                </h1>
+                <p class="whitespace-nowrap font-ubuntu text-Coolgray">
+                  Extra 1TB of cloud save
+                </p>
+              </div>
+              <div>
+                <p>
+                  +$1/mo
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="bg-White border-2 border-Coolgray rounded-lg">
+          <div class="flex space-x-4 p-4">
+            <div class="flex items-center">
+              <input id="checkbox" type="checkbox"
+                class="form-checkbox h-5 w-5 text-blue-600 transition duration-150 ease-in-out">
+              <label for="checkbox" class="ml-2 text-sm font-medium text-gray-900"></label>
+            </div>
+            <div class="flex justify-between items-center space-x-6">
+              <div>
+                <h1 class="font-ubuntu text-lg text-Marineblue font-bold">
+                  Customizable Profile
+                </h1>
+                <p class="whitespace-nowrap font-ubuntu text-Coolgray">
+                  Custom theme on your
+                  profile
+                </p>
+              </div>
+              <div>
+                <p>
+                  +$1/mo
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="pt-14 flex flex-row-reverse justify-between">
+        <div>
+          <a href="#" class="px-6 py-3 bg-Marineblue text-White rounded-lg font-ubuntu font-bold">Next
+            Step</a>
+        </div>
+        <div>
+          <a href="#" class="px-6 py-3 bg-Coolgray text-White rounded-lg font-ubuntu font-bold">Go
+            Back</a>
+        </div>
+      </div>
 
-  <!-- 
-             Monthly Yearly Go
-            Back Next Step Step 2 end Step 3 start Pick add-ons Add-ons help enhance your gaming experience. Online
-            service  Larger storage Extra 1TB of cloud save +$2/mo Customizable
-            Profile Custom theme on your profile +$2/mo Go Back Next Step Step 3 end Step 4 start Finishing up
-            Double-check everything looks OK before confirming. Dynamically add subscription and add-on selections here
-            Total (per month/year) Go Back Confirm step 4 end Step 5 start Thank you! Thanks for confirming your
-            subscription! We hope you have fun using our platform. If you ever need support, please feel free to email
-            us at support@loremgaming.com. Step 5 end -->
+    </div>
+
+  </div>
+  <!-- Finishingup -->
+
+  <!--Pick add-ons Add-ons help enhance your gaming
+    experience. Online service +$2/mo Go Back Next Step Step 3 end Step 4 start Finishing up Double-check everything looks OK before
+    confirming. Dynamically add subscription and add-on selections here Total (per month/year) Go Back Confirm step 4
+    end Step 5 start Thank you! Thanks for confirming your subscription! We hope you have fun using our platform. If you
+    ever need support, please feel free to email us at support@loremgaming.com. Step 5 end -->
   <div class="attribution fixed bottom-0 p-2">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
