--- a/src/index.html
+++ b/src/index.html
@@ -104,11 +104,6 @@
     </div>
   </div>
 
-
-
-
-
-
   <!-- selectPlanPage -->
   <div class="bg-White rounded-lg p-2 shadow-lg hidden">
 
@@ -218,7 +213,7 @@
     </div>
   </div>
   <!-- pickaddons -->
-  <div class="bg-White flex rounded-lg p-2 shadow-lg">
+  <div class="bg-White flex rounded-lg p-2 shadow-lg hidden">
 
     <div class="bg-[url('./images/bg-sidebar-desktop.svg')] bg-contain bg-no-repeat p-5 rounded-l-lg">
       <div class="p-5 space-y-8">
@@ -364,11 +359,97 @@
     </div>
 
   </div>
+
   <!-- Finishingup -->
+  <div class="bg-White flex rounded-lg p-2">
+
+    <div class="bg-[url('./images/bg-sidebar-desktop.svg')] bg-contain bg-no-repeat p-5 rounded-l-lg">
+      <div class="p-5 space-y-8">
+
+        <div class="flex items-center">
+          <div class="w-10 h-10 flex items-center justify-center text-black bg-Lightblue rounded-full">
+            1
+          </div>
+          <div class="ml-4">
+            <p class="font-ubuntu text-Coolgray whitespace-nowrap">STEP 1</p>
+            <h3 class="font-ubuntu text-lg text-White font-bold whitespace-nowrap">YOUR INFO</h3>
+          </div>
+        </div>
+
+        <div class="flex items-center">
+          <div class="w-10 h-10 flex items-center justify-center text-black bg-Lightblue rounded-full">
+            2
+          </div>
+          <div class="ml-4">
+            <p class="font-ubuntu text-Coolgray whitespace-nowrap">STEP 2</p>
+            <h3 class="font-ubuntu text-lg text-White font-bold whitespace-nowrap">SELECT PLAN</h3>
+          </div>
+        </div>
+
+        <div class="flex items-center">
+          <div class="w-10 h-10 flex items-center justify-center text-black bg-Lightblue rounded-full">
+            3
+          </div>
+          <div class="ml-4">
+            <p class="font-ubuntu text-Coolgray whitespace-nowrap">STEP 3</p>
+            <h3 class="font-ubuntu text-lg text-White font-bold whitespace-nowrap">ADD-ONS</h3>
+          </div>
+        </div>
+
+        <div class="flex items-center">
+          <div class="w-10 h-10 flex items-center justify-center text-black bg-Lightblue rounded-full">
+            4
+          </div>
+          <div class="ml-4">
+            <p class="font-ubuntu text-Coolgray whitespace-nowrap">STEP 4</p>
+            <h3 class="font-ubuntu text-lg text-White font-bold whitespace-nowrap">SUMMARY</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Form Area -->
+    <div class="py-10 px-12">
+      <h1 class="text-Marineblue font-ubuntu text-2xl font-bold">Finishing up</h1>
+      <p class="font-ubuntu text-base text-Coolgray mb-5">
+        Double-check everything looks OK before
+        confirming.
+      </p>
+      <form action="#">
+        <div class="space-y-6">
+          <div>
+            <p class="text-base font-ubuntu font-bold">Name</p>
+            <input type="text" class="w-full border-Lightgray px-2 py-2 border-2 rounded-lg"
+              placeholder="e.g. Stephen King">
+          </div>
+          <div>
+            <p class="text-base font-ubuntu font-bold">Email Address</p>
+            <input type="email" class="w-full border-Lightgray px-2 py-2 border-2 rounded-lg"
+              placeholder="e.g.stephenking@lorem.com">
+          </div>
+          <div>
+            <p class="text-base font-ubuntu font-bold">Phone Number</p>
+            <input type="text" class="w-full border-Lightgray px-2 py-2 border-2 rounded-lg"
+              placeholder="e.g. +1 234 567 890">
+          </div>
+        </div>
+        <div class="pt-14 flex flex-row-reverse justify-between">
+          <div>
+            <a href="#" class="px-6 py-3 bg-Purplishblue text-White rounded-lg font-ubuntu font-bold">Confirm
+            </a>
+          </div>
+          <div>
+            <a href="#" class="px-6 py-3 bg-Coolgray text-White rounded-lg font-ubuntu font-bold">Go
+              Back</a>
+          </div>
+        </div>
+      </form>
+
+    </div>
+  </div>
 
   <!--Pick add-ons Add-ons help enhance your gaming
-    experience. Online service +$2/mo Go Back Next Step Step 3 end Step 4 start Finishing up Double-check everything looks OK before
-    confirming. Dynamically add subscription and add-on selections here Total (per month/year) Go Back Confirm step 4
+    experience. Online service +$2/mo Go Back Next Step Step 3 end Step 4 start  Dynamically add subscription and add-on selections here Total (per month/year) Go Back Confirm step 4
     end Step 5 start Thank you! Thanks for confirming your subscription! We hope you have fun using our platform. If you
     ever need support, please feel free to email us at support@loremgaming.com. Step 5 end -->
   <div class="attribution fixed bottom-0 p-2">
